# assignment-list-qt

./: .gitignore  CMakeLists.txt  README.md  config.h.in  resources.qrc
.github/workflows/: build-check.yml  cmake-multi-platform.yml
data/: assignment-list.desktop  assignment-list.desktop.in
nsis/: installer.nsi.in
src/: addEntryForm.cpp  addGroupForm.cpp  add_entry_form.cpp  add_entry_form.h  add_entry_form.ui  add_group_form.cpp  add_group_form.h  add_group_form.ui  assignmentList.cpp  assignmentList.h  assignmentList.ui  editEntryForm.cpp  editGroupForm.cpp  edit_entry_form.cpp  edit_entry_form.h  edit_group_form.cpp  edit_group_form.h  entry.cpp  entry.h  entryForm.ui  entryLayout.cpp  entryLayout.h  entry_form.ui  group.cpp  group.h  groupForm.ui  groupLayout.cpp  lib.cpp  lib.h  main.cpp  main.ui  preferencesDialog.cpp  preferencesDialog.ui  rule.cpp  rule.h  ruleLayout.cpp  ruleLayout.h  rulesDialog.cpp  rulesDialog.h  rulesDialog.ui  (+2 more)
src/backend/: db_sqlite.cpp  db_sqlite.h
src/frontend/qtquick/: main.cpp  main.qml
src/frontend/qtwidgets/: addEntryForm.cpp  addEntryForm.h  addGroupForm.cpp  addGroupForm.h  assignmentList.cpp  assignmentList.h  assignmentList.ui  editEntryForm.cpp  editEntryForm.h  editGroupForm.cpp  editGroupForm.h  entryLayout.cpp  entryLayout.h  group.cpp  group.h  groupLayout.cpp  groupLayout.h  preferencesDialog.h  rule.cpp  rulesDialog.cpp  rulesDialog.h
src/icon/: assignment-list.dia  assignment-list.rc
